[tool.poetry]
name = "rpg_fighter_tutorial"
version = "0.1.0"
description = ""
authors = ["Glenn Elliron Clark <Elliron.Clark@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"
pytest = "^6.2.4"
black = "^21.7b0"
coverage = "^5.5"
tk = "^0.1.0"
Tcl = "^0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
